# syksC-

2026_dart_guide-main/: CMakeLists.txt  README.md
2026_dart_guide-main/configs/: test.yaml
2026_dart_guide-main/io/: CMakeLists.txt
2026_dart_guide-main/src/: main.cpp
2026_dart_guide-main/tasks/light_detect/: CMakeLists.txt  Detect.cpp  Detect.hpp
2026_dart_guide-main/tasks/light_detect/openvino/: openvinoInfer.cpp  openvinoInfer.hpp
